--- a/juego.html
+++ b/juego.html
@@ -12,7 +12,10 @@
 	</div>
 	<div class="contenedor">
 		<div id="player">
-			<img id="imag" src="goku2.gif">
+			<img id="imag" src="goku2.gif">			
+		</div>
+		<div id="villano">
+			<img id="imag2" src="goku1.gif">
 		</div>
 	</div>
 	<script type="text/javascript" src="js/codigo.js"></script>
